팀 시스템까지완성 (관리 명령어 제외)